--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,74 +6,76 @@
   <title>Capital Games | Gaming Collectibles & Figures</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { margin:0; font-family:Inter,sans-serif; background:#f6f7f9; color:#111 }
-    header { background:#c62828; padding:20px }
-    header nav a { color:#fff; margin-left:20px; font-weight:600; text-decoration:none }
-    .container { max-width:1300px; margin:auto; padding:40px 20px }
-    .grid { display:grid; grid-template-columns:repeat(4,1fr); gap:20px }
-    @media(max-width:900px){.grid{grid-template-columns:repeat(2,1fr)}}
-    .card { background:#fff; border:1px solid #e2e5ea; border-radius:6px; overflow:hidden }
-    .card img { width:100%; height:240px; object-fit:contain; background:#fafafa }
-    .card-content { padding:16px }
-    .btn { display:inline-block; border:1px solid #c62828; color:#c62828; padding:8px 14px; font-weight:600 }
+    :root { --bg:#f6f7f9; --card:#fff; --text:#111; --muted:#555; --red:#c62828; --border:#e2e5ea; }
+    body { margin:0; font-family:Inter,sans-serif; background:var(--bg); color:var(--text); }
+    header { background:var(--red); }
+    .bar { max-width:1300px; margin:auto; padding:18px 20px; display:flex; justify-content:space-between; align-items:center; }
+    .brand { display:flex; align-items:center; gap:12px; color:#fff; font-weight:800; }
+    .brand img { height:42px; }
+    nav a { color:#fff; margin-left:18px; font-weight:700; text-decoration:none; }
+    nav a:hover { text-decoration:underline; }
+    .container { max-width:1300px; margin:auto; padding:40px 20px; }
+    .hero { background:#fff; }
+    .hero h1 { margin:0 0 10px; font-size:2.4rem; }
+    .hero p { color:var(--muted); max-width:720px; }
+    .cta { display:inline-block; background:var(--red); color:#fff; padding:12px 18px; border-radius:8px; font-weight:800; text-decoration:none; }
+    .grid { display:grid; grid-template-columns:repeat(4,1fr); gap:18px; }
+    @media(max-width:900px){ .grid{grid-template-columns:repeat(2,1fr);} }
+    .card { background:var(--card); border:1px solid var(--border); border-radius:12px; overflow:hidden; }
+    .card img { width:100%; height:220px; object-fit:contain; background:#fafafa; }
+    .card-body { padding:14px; }
+    .title { font-weight:800; font-size:1rem; margin-bottom:8px; }
+    .meta { font-size:.85rem; color:var(--muted); margin-bottom:10px; }
+    .btn { border:1px solid var(--red); color:var(--red); padding:8px 12px; border-radius:8px; font-weight:800; text-decoration:none; }
   </style>
 </head>
 <body>
 
 <header>
-  <div class="container" style="display:flex;justify-content:space-between;align-items:center;">
-    <strong style="color:#fff">Capital Games</strong>
+  <div class="bar">
+    <div class="brand">
+      <img src="capitalgames.png" alt="Capital Games Logo">
+      <span>Capital Games</span>
+    </div>
     <nav>
-      <a href="#home">Home</a>
-      <a href="#shop">Shop</a>
+      <a href="index.html">Home</a>
+      <a href="shop.html">Shop</a>
       <a href="https://www.ebay.ca/usr/capitalgames" target="_blank">eBay Store</a>
     </nav>
   </div>
 </header>
 
-<section class="container">
-  <h1>Featured Listings</h1>
-  <div id="featuredGrid" class="grid"></div>
+<section class="hero">
+  <div class="container">
+    <h1>Premium Gaming Collectibles & Figures</h1>
+    <p>Curated figures, model kits, and gaming collectibles. All purchases completed securely through eBay.</p>
+    <a class="cta" href="shop.html">Browse the Shop</a>
+  </div>
 </section>
 
-<section id="shop" class="container">
-  <h1>Shop All Items</h1>
-  <div id="shopGrid" class="grid"></div>
+<section class="container">
+  <h2>Featured Listings</h2>
+  <div id="featuredGrid" class="grid"></div>
 </section>
 
 <script src="products.js"></script>
 <script>
-const products = window.PRODUCTS || [];
+const products = (window.PRODUCTS || []).filter(p => (p.status||'').toLowerCase() === 'active');
+const featured = products.filter(p => p.featured === true);
+const count = featured.length >= 8 ? 8 : (featured.length >= 4 ? 4 : featured.length);
 
-function renderFeatured(){
-  const grid = document.getElementById('featuredGrid');
-  const items = products.filter(p => p.featured && p.status === 'active').slice(0,8);
-  grid.innerHTML = items.map(p => `
+document.getElementById('featuredGrid').innerHTML =
+  count ? featured.slice(0, count).map(p => `
     <div class="card">
       <img src="${p.image}" alt="${p.title}">
-      <div class="card-content">
-        <strong>${p.title}</strong><br>
+      <div class="card-body">
+        <div class="title">${p.title}</div>
+        <div class="meta">${p.category} • ${p.theme}</div>
         <a class="btn" href="${p.link}" target="_blank">View on eBay</a>
       </div>
-    </div>`).join("");
-}
-
-function renderShop(){
-  const grid = document.getElementById('shopGrid');
-  const items = products.filter(p => p.status === 'active');
-  grid.innerHTML = items.map(p => `
-    <div class="card">
-      <img src="${p.image}" alt="${p.title}">
-      <div class="card-content">
-        <strong>${p.title}</strong><br>
-        <small>${p.category} • ${p.theme} • ${p.type}</small><br><br>
-        <a class="btn" href="${p.link}" target="_blank">View on eBay</a>
-      </div>
-    </div>`).join("");
-}
-
-renderFeatured();
-renderShop();
+    </div>
+  `).join("") :
+  '<p>No featured items yet.</p>';
 </script>
 
 </body>
