--- a/category-model-kit.html
+++ b/category-model-kit.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shop | Capital Games</title>
+  <title>Model Kit | Capital Games</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
-<body data-quick="all">
+<body data-category="Model Kit">
 <header>
   <div class="bar">
     <div class="brand">
@@ -23,9 +23,10 @@
   </div>
 </header>
 <div class="container">
-  <h1 style="margin:0 0 8px;font-size:2.2rem;">Shop</h1>
+  <div class="breadcrumb"><a href="./categories.html">Categories</a> / <strong>Model Kit</strong></div>
+  <h1 style="margin:0 0 8px;font-size:2.2rem;">Model Kit</h1>
   <p class="sub" style="color:var(--muted);margin:0 0 18px;max-width:860px;">
-    Browse active listings by <strong>Category → Theme → Type</strong>. Click any item to purchase securely on eBay.
+    Showing active listings in <strong>Model Kit</strong>. Refine further using the left sidebar.
   </p>
 
   <div class="layout">
@@ -49,7 +50,6 @@
         <select id="sort">
           <option value="az">Sort: A–Z</option>
           <option value="za">Sort: Z–A</option>
-          <option value="cat">Sort: Category</option>
           <option value="theme">Sort: Theme</option>
           <option value="featured">Sort: Featured First</option>
         </select>
