--- a/index.html
+++ b/index.html
@@ -5,51 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Capital Games | Gaming Collectibles & Figures</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <style>
-    :root { --bg:#f6f7f9; --card:#fff; --text:#111; --muted:#555; --red:#c62828; --border:#e2e5ea; }
-    body { margin:0; font-family:Inter,sans-serif; background:var(--bg); color:var(--text); }
-    header { background:var(--red); }
-    .bar { max-width:1300px; margin:auto; padding:18px 20px; display:flex; justify-content:space-between; align-items:center; }
-    .brand { display:flex; align-items:center; gap:12px; color:#fff; font-weight:800; }
-    .brand img { height:42px; }
-    nav a { color:#fff; margin-left:18px; font-weight:700; text-decoration:none; }
-    nav a:hover { text-decoration:underline; }
-    .container { max-width:1300px; margin:auto; padding:40px 20px; }
-    .hero { background:#fff; }
-    .hero h1 { margin:0 0 10px; font-size:2.4rem; }
-    .hero p { color:var(--muted); max-width:720px; }
-    .cta { display:inline-block; background:var(--red); color:#fff; padding:12px 18px; border-radius:8px; font-weight:800; text-decoration:none; }
-    .grid { display:grid; grid-template-columns:repeat(4,1fr); gap:18px; }
-    @media(max-width:900px){ .grid{grid-template-columns:repeat(2,1fr);} }
-    .card { background:var(--card); border:1px solid var(--border); border-radius:12px; overflow:hidden; }
-    .card img { width:100%; height:220px; object-fit:contain; background:#fafafa; }
-    .card-body { padding:14px; }
-    .title { font-weight:800; font-size:1rem; margin-bottom:8px; }
-    .meta { font-size:.85rem; color:var(--muted); margin-bottom:10px; }
-    .btn { border:1px solid var(--red); color:var(--red); padding:8px 12px; border-radius:8px; font-weight:800; text-decoration:none; }
-  </style>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
 <header>
   <div class="bar">
     <div class="brand">
-      <img src="capitalgames.png" alt="Capital Games Logo">
+      <img src="capitalgames.png" alt="Capital Games logo">
       <span>Capital Games</span>
     </div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="shop.html">Shop</a>
-      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank">eBay Store</a>
+      <a href="./index.html">Home</a>
+      <a href="./shop.html">Shop</a>
+      <a href="./categories.html">Categories</a>
+      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay Store</a>
     </nav>
   </div>
 </header>
-
 <section class="hero">
   <div class="container">
     <h1>Premium Gaming Collectibles & Figures</h1>
-    <p>Curated figures, model kits, and gaming collectibles. All purchases completed securely through eBay.</p>
-    <a class="cta" href="shop.html">Browse the Shop</a>
+    <p>Curated figures, model kits, and gaming collectibles for serious collectors. All purchases are completed securely through eBay.</p>
+    <a class="cta" href="./shop.html">Browse the Shop</a>
+    <span style="display:inline-block;width:10px"></span>
+    <a class="cta" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener" style="background:#111">Shop on eBay</a>
   </div>
 </section>
 
@@ -58,25 +37,14 @@
   <div id="featuredGrid" class="grid"></div>
 </section>
 
-<script src="products.js"></script>
-<script>
-const products = (window.PRODUCTS || []).filter(p => (p.status||'').toLowerCase() === 'active');
-const featured = products.filter(p => p.featured === true);
-const count = featured.length >= 8 ? 8 : (featured.length >= 4 ? 4 : featured.length);
-
-document.getElementById('featuredGrid').innerHTML =
-  count ? featured.slice(0, count).map(p => `
-    <div class="card">
-      <img src="${p.image}" alt="${p.title}">
-      <div class="card-body">
-        <div class="title">${p.title}</div>
-        <div class="meta">${p.category} • ${p.theme}</div>
-        <a class="btn" href="${p.link}" target="_blank">View on eBay</a>
-      </div>
-    </div>
-  `).join("") :
-  '<p>No featured items yet.</p>';
-</script>
-
+<footer>
+  <div class="foot">
+    <div>© Capital Games</div>
+    <div>All purchases are completed through eBay for buyer protection.</div>
+  </div>
+</footer>
+<script src="./products.js"></script>
+<script src="./app.js"></script>
+<script>CG_renderFeatured();</script>
 </body>
 </html>
