--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
-<body data-quick="all">
+<body>
 <header>
   <div class="bar">
     <div class="brand">
@@ -17,15 +17,15 @@
     <nav>
       <a href="./index.html">Home</a>
       <a href="./shop.html">Shop</a>
-      <a href="./categories.html">Categories</a>
       <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay Store</a>
     </nav>
   </div>
 </header>
 <div class="container">
+  <div class="breadcrumb"><a href="./index.html">Home</a> / <strong>Shop</strong></div>
   <h1 style="margin:0 0 8px;font-size:2.2rem;">Shop</h1>
   <p class="sub" style="color:var(--muted);margin:0 0 18px;max-width:860px;">
-    Browse active listings by <strong>Category → Theme → Type</strong>. Click any item to purchase securely on eBay.
+    Browse active listings by <strong>Category → Theme → Type</strong>. Use filters, search, and sorting to find what you want.
   </p>
 
   <div class="layout">
