--- a/shop.html
+++ b/shop.html
@@ -25,22 +25,32 @@
   <div class="breadcrumb"><a href="./index.html">Home</a> / <strong>Shop</strong></div>
   <h1 style="margin:0 0 8px;font-size:2.2rem;">Shop</h1>
   <p class="sub" style="color:var(--muted);margin:0 0 18px;max-width:860px;">
-    Browse active listings by <strong>Category → Theme → Type</strong>. Use filters, search, and sorting to find what you want.
+    Browse active listings by <strong>Category → Theme → Type</strong>. Start by choosing a category on the left.
   </p>
 
   <div class="layout">
     <aside class="panel">
-      <h3>Browse</h3>
+      <h3>Filters</h3>
 
       <div style="margin:10px 0 14px;">
-        <a class="pill active" href="#" data-quick="all">All Items</a>
-        <a class="pill" href="#" data-quick="featured">Featured Only</a>
+        <a class="pill active" href="#" data-quick="all"><span>All Items</span><span class="smallcount" id="countAll">0</span></a>
+        <a class="pill" href="#" data-quick="featured"><span>Featured Only</span><span class="smallcount" id="countFeatured">0</span></a>
       </div>
 
-      <details open>
-        <summary>Categories</summary>
-        <div id="categoryTree" style="margin-top:10px;"></div>
-      </details>
+      <div class="divider"></div>
+
+      <div class="kicker">Category</div>
+      <div id="categoryList"></div>
+
+      <div class="divider"></div>
+
+      <div class="kicker">Theme</div>
+      <div id="themeList" style="opacity:.95;"></div>
+
+      <div class="divider"></div>
+
+      <div class="kicker">Type</div>
+      <div id="typeList" style="opacity:.95;"></div>
     </aside>
 
     <main>
