--- a/index.html
+++ b/index.html
@@ -1,49 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Capital Games | Gaming Collectibles & Figures</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
+<meta charset="UTF-8">
+<title>Capital Games</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-  <div class="bar">
-    <div class="brand">
-      <img src="capitalgames.png" alt="Capital Games logo">
-      <span>Capital Games</span>
-    </div>
-    <nav>
-      <a href="./index.html">Home</a>
-      <a href="./shop.html">Shop</a>
-      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay Store</a>
-    </nav>
-  </div>
+<header class="header">
+<div class="header-inner">
+<div class="logo">Capital Games</div>
+<nav>
+<a href="index.html">Home</a>
+<a href="shop.html">Shop</a>
+<a href="https://www.ebay.ca/usr/capitalgames" target="_blank">eBay Store</a>
+</nav>
+</div>
 </header>
 <section class="hero">
-  <div class="container">
-    <h1>Premium Gaming Collectibles & Figures</h1>
-    <p>Curated figures, model kits, and gaming collectibles for serious collectors. All purchases are completed securely through eBay.</p>
-    <a class="cta" href="./shop.html">Browse the Shop</a>
-    <span style="display:inline-block;width:10px"></span>
-    <a class="cta" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener" style="background:#111">Shop on eBay</a>
-  </div>
+<h1>Curated Collectibles & Games</h1>
+<a class="cta" href="shop.html">Browse the Shop</a>
 </section>
-
-<section class="container">
-  <h2>Featured Listings</h2>
-  <div id="featuredGrid" class="grid"></div>
-</section>
-
-<footer>
-  <div class="foot">
-    <div>© Capital Games</div>
-    <div>All purchases are completed through eBay for buyer protection.</div>
-  </div>
-</footer>
-<script src="./products.js"></script>
-<script src="./app.js"></script>
-<script>CG_renderFeatured();</script>
 </body>
 </html>
