--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Capital Games</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Capital Games | Collectibles & Games</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
 <header class="header">
-<div class="header-inner">
-<div class="logo">Capital Games</div>
-<nav>
-<a href="index.html">Home</a>
-<a href="shop.html">Shop</a>
-<a href="https://www.ebay.ca/usr/capitalgames" target="_blank">eBay Store</a>
-</nav>
-</div>
+  <div class="header-inner">
+    <div class="logo">Capital Games</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="shop.html">Shop</a>
+      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank">eBay Store</a>
+    </nav>
+  </div>
 </header>
+
 <section class="hero">
-<h1>Curated Collectibles & Games</h1>
-<a class="cta" href="shop.html">Browse the Shop</a>
+  <h1>Curated Collectibles & Games</h1>
+  <p>All purchases are completed securely through eBay.</p>
+  <a class="cta" href="shop.html">Browse the Shop</a>
 </section>
+
+<footer class="footer">
+  © Capital Games
+</footer>
+
 </body>
 </html>
