--- a/shop.html
+++ b/shop.html
@@ -26,7 +26,7 @@
 <div class="container">
   <h1 style="margin:0 0 8px;font-size:2.2rem;">Shop</h1>
   <p style="color:var(--muted);margin:0 0 18px;max-width:860px;">
-    Drill down just like NHL shop: click a <strong>Category</strong> to filter, then refine by <strong>Theme</strong>, then <strong>Type</strong>.
+    Click a <strong>Category</strong> to filter. Themes appear directly underneath. Click a <strong>Theme</strong> to filter further, then choose a <strong>Type</strong>.
   </p>
 
   <div class="layout">
@@ -44,8 +44,7 @@
 
       <div class="divider"></div>
 
-      <div class="kicker">Filters</div>
-      <div id="filterTree" class="treeGroup"></div>
+      <div id="sidebarTree" class="treeGroup" aria-label="Category Theme Type filters"></div>
     </aside>
 
     <main>
