--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <a href="./index.html">Home</a>
       <a href="./shop.html">Shop</a>
-      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay Store</a>
+      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank">eBay Store</a>
     </nav>
   </div>
 </header>
@@ -28,8 +28,6 @@
     <h1>Premium Gaming Collectibles & Figures</h1>
     <p>Curated figures, model kits, and collectibles. All purchases are completed securely through eBay.</p>
     <a class="cta" href="./shop.html">Browse the Shop</a>
-    <span style="display:inline-block;width:10px"></span>
-    <a class="cta" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener" style="background:#111">Shop on eBay</a>
   </div>
 </section>
 
