--- a/shop.html
+++ b/shop.html
@@ -18,16 +18,13 @@
     <nav>
       <a href="./index.html">Home</a>
       <a href="./shop.html">Shop</a>
-      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay Store</a>
+      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank">eBay Store</a>
     </nav>
   </div>
 </header>
 
 <div class="container">
-  <h1 style="margin:0 0 8px;font-size:2.2rem;">Shop</h1>
-  <p style="color:var(--muted);margin:0 0 18px;max-width:860px;">
-    Click a <strong>Category</strong> to filter. Themes appear directly underneath. Click a <strong>Theme</strong> to filter further, then choose a <strong>Type</strong>.
-  </p>
+  <h1>Shop</h1>
 
   <div class="layout">
     <aside class="panel">
@@ -43,8 +40,7 @@
       </div>
 
       <div class="divider"></div>
-
-      <div id="sidebarTree" class="treeGroup" aria-label="Category Theme Type filters"></div>
+      <div id="sidebarTree" class="treeGroup"></div>
     </aside>
 
     <main>
