--- a/shop.html
+++ b/shop.html
@@ -47,9 +47,18 @@
           <option value="za">Sort: Z–A</option>
           <option value="featured">Sort: Featured First</option>
         </select>
+        <select id="pageSize" aria-label="Items per page">
+          <option value="10">Show: 10</option>
+          <option value="25" selected>Show: 25</option>
+          <option value="50">Show: 50</option>
+          <option value="100">Show: 100</option>
+          <option value="all">Show: All</option>
+        </select>
       </div>
+
       <div id="resultCount" class="count"></div>
       <div id="shopGrid" class="grid"></div>
+      <div id="pagination" class="pagination"></div>
     </main>
   </div>
 </div>
