--- a/shop.html
+++ b/shop.html
@@ -48,12 +48,12 @@
           <option value="featured">Sort: Featured First</option>
         </select>
         <select id="pageSize" aria-label="Items per page">
-          <option value="10">Show: 10</option>
-          <option value="25" selected>Show: 25</option>
-          <option value="50">Show: 50</option>
-          <option value="100">Show: 100</option>
-          <option value="all">Show: All</option>
-        </select>
+  <option value="all" selected>Show: All</option>
+  <option value="10">Show: 10</option>
+  <option value="25">Show: 25</option>
+  <option value="50">Show: 50</option>
+  <option value="100">Show: 100</option>
+</select>
       </div>
 
       <div id="resultCount" class="count"></div>
