--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,11 @@
 
 <div class="container">
   <h1 style="margin:0 0 8px;font-size:2.2rem;">Shop</h1>
-    <div class="layout">
+  <p style="color:var(--muted);margin:0 0 18px;max-width:860px;">
+    Click a <strong>Category</strong> to filter. Themes appear directly underneath. Click a <strong>Theme</strong> to filter further, then choose a <strong>Type</strong>.
+  </p>
+
+  <div class="layout">
     <aside class="panel">
       <h3>Browse</h3>
       <div style="margin:10px 0 14px;">
@@ -43,18 +47,9 @@
           <option value="za">Sort: Z–A</option>
           <option value="featured">Sort: Featured First</option>
         </select>
-        <select id="pageSize" aria-label="Items per page">
-          <option value="10">Show: 10</option>
-          <option value="25" selected>Show: 25</option>
-          <option value="50">Show: 50</option>
-          <option value="100">Show: 100</option>
-          <option value="all">Show: All</option>
-        </select>
       </div>
-
       <div id="resultCount" class="count"></div>
       <div id="shopGrid" class="grid"></div>
-      <div id="pagination" class="pagination"></div>
     </main>
   </div>
 </div>
