--- a/shop.html
+++ b/shop.html
@@ -11,8 +11,7 @@
 <header>
   <div class="bar">
     <div class="brand">
-      <img src="capitalgames.png" alt="Capital Games logo">
-      <span>Capital Games</span>
+      <img class="logoMain" src="./assets/logo-main-small.png" alt="Capital Games">
     </div>
     <nav>
       <a href="./index.html">Home</a>
