--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <a href="./shop.html">New Arrivals</a>
   </div>
 
-  <div class="bar headerBar">
+  <div class="headerWrap">
+  <div class="bar headerBar headerBarWide">
     <div class="brand brandDark">
       <img class="logoMain" src="./assets/logo-main-small.png" alt="Capital Games">
     </div>
@@ -45,6 +46,7 @@
       </a>
     </div>
   </div>
+</div>
 </header>
 
 <section class="heroMock">
