--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,17 @@
 </head>
 <body>
 <header>
-  <div class="bar">
+    <div class="topNav">
+    <a href="./shop.html">Shop</a>
+    <a href="./shop.html">Consoles</a>
+    <a href="./shop.html">Games</a>
+    <a href="./shop.html">Accessories</a>
+    <a href="./shop.html">Trading Cards</a>
+    <a href="./shop.html">New Arrivals</a>
+  </div>
+
+<div class="headerWrap">
+  <div class="bar headerBar headerBarWide">
     <div class="brand">
       <img class="logoMain" src="./assets/logo-main-small.png" alt="Capital Games">
     </div>
@@ -19,6 +29,7 @@
       <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay Store</a>
     </nav>
   </div>
+</div>
 </header>
 
 <div class="container">
