--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
 <div class="headerWrap">
   <div class="bar headerBar headerBarWide">
     <div class="brand">
-      <img class="logoMain" src="./assets/logo-main-small.png" alt="Capital Games">
+      <img class="logoMain"  class="logoMain" src="./assets/CapitalGamesmain.png" alt="Capital Games">
     </div>
     <nav>
       <a href="./index.html">Home</a>
