--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="headerWrap">
   <div class="bar headerBar headerBarWide">
     <div class="brand brandDark">
-      <img class="logoMain"  class="logoMain" src="./assets/CapitalGamesmain.png" alt="Capital Games">
+      <img class="logoMain" src="./assets/logo-main-small.png" alt="Capital Games">
     </div>
 
     <div class="headerSearch">
