--- a/index.html
+++ b/index.html
@@ -9,41 +9,47 @@
 </head>
 <body>
 <header>
-  <div class="bar">
+  
+  <div class="topNav">
+    <a href="./shop.html">Shop</a>
+    <a href="./shop.html">Consoles</a>
+    <a href="./shop.html">Games</a>
+    <a href="./shop.html">Accessories</a>
+    <a href="./shop.html">Trading Cards</a>
+    <a href="./shop.html">New Arrivals</a>
+  </div>
+
+<div class="bar">
     <div class="brand">
-      <img src="./assets/CapitalGamesmain.png" alt="Capital Games logo">
+      <img src="capitalgames.png" alt="Capital Games logo">
       <span>Capital Games</span>
     </div>
     <nav>
       <a href="./index.html">Home</a>
       <a href="./shop.html">Shop</a>
-      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay Store</a>
+      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank">eBay Store</a>
     </nav>
   </div>
+  </div>
+</div>
 </header>
-
 <section class="hero">
-  <div class="container" style="padding:0 20px;">
+  <div class="container">
     <h1>Premium Gaming Collectibles & Figures</h1>
-    <p>Curated figures, model kits, and gaming collectibles. All purchases are completed securely through eBay.</p>
+    <p>Curated figures, model kits, and collectibles. All purchases are completed securely through eBay.</p>
     <a class="cta" href="./shop.html">Browse the Shop</a>
-    <span style="display:inline-block;width:10px"></span>
-    <a class="cta" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener" style="background:#111">Shop on eBay</a>
   </div>
 </section>
-
 <section class="container">
   <h2>Featured Listings</h2>
   <div id="featuredGrid" class="grid"></div>
 </section>
-
 <footer>
   <div class="foot">
     <div>© Capital Games</div>
     <div>All purchases are completed through eBay for buyer protection.</div>
   </div>
 </footer>
-
 <script src="./products.js"></script>
 <script src="./app.js"></script>
 <script>CG_renderFeatured();</script>
