--- a/shop.html
+++ b/shop.html
@@ -1,66 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shop | Capital Games</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Shop | Capital Games</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <header>
-  <div class="bar">
+  
+  <div class="topNav">
+    <a href="./shop.html">Shop</a>
+    <a href="./shop.html">Consoles</a>
+    <a href="./shop.html">Games</a>
+    <a href="./shop.html">Accessories</a>
+    <a href="./shop.html">Trading Cards</a>
+    <a href="./shop.html">New Arrivals</a>
+  </div>
+
+<div class="bar">
     <div class="brand">
-      <img src="./assets/CapitalGamesmain.png" alt="Capital Games logo">
+      <img src="capitalgames.png" alt="Capital Games logo">
       <span>Capital Games</span>
     </div>
     <nav>
       <a href="./index.html">Home</a>
       <a href="./shop.html">Shop</a>
-      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay Store</a>
+      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank">eBay Store</a>
     </nav>
   </div>
+  </div>
+</div>
 </header>
-
 <div class="container">
-  <h1 style="margin:0 0 8px;font-size:2.2rem;">Shop</h1>
-  <p style="color:var(--muted);margin:0 0 18px;max-width:860px;">
-    Click a <strong>Category</strong> to filter. Themes appear directly underneath. Click a <strong>Theme</strong> to filter further, then choose a <strong>Type</strong>.
-  </p>
-
+  <h1>Shop</h1>
   <div class="layout">
     <aside class="panel">
-      <h3>Browse</h3>
-      <div style="margin:10px 0 14px;">
-        <a class="pill active" href="#" data-quick="all"><span>All Items</span><span class="smallcount" id="countAll">0</span></a>
-        <a class="pill" href="#" data-quick="featured"><span>Featured Only</span><span class="smallcount" id="countFeatured">0</span></a>
-      </div>
-      <div class="divider"></div>
-      <div id="sidebarTree" class="treeGroup"></div>
+      <a class="pill active" href="#" data-quick="all">All Items <span id="countAll"></span></a>
+      <a class="pill" href="#" data-quick="featured">Featured Only <span id="countFeatured"></span></a>
+      <div id="filterTree"></div>
     </aside>
-
     <main>
-      <div class="searchRow">
-        <input id="q" type="search" placeholder="Search titles..." />
-        <select id="sort">
-          <option value="az">Sort: A–Z</option>
-          <option value="za">Sort: Z–A</option>
-          <option value="featured">Sort: Featured First</option>
-        </select>
-      </div>
-      <div id="resultCount" class="count"></div>
+      <div id="resultCount"></div>
       <div id="shopGrid" class="grid"></div>
     </main>
   </div>
 </div>
-
-<footer>
-  <div class="foot">
-    <div>© Capital Games</div>
-    <div>All purchases are completed through eBay for buyer protection.</div>
-  </div>
-</footer>
-
 <script src="./products.js"></script>
 <script src="./app.js"></script>
 <script>CG_initShop();</script>
