--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body class="bgTexture">
 <header class="siteHeader">
   <div class="topNav">
     <a href="./shop.html">Shop</a>
@@ -36,6 +36,19 @@
     </div>
   </div>
 </header>
+
+
+<section class="heroMock">
+  <div class="heroInner">
+    <div class="heroCopy">
+      <div class="heroKicker">CAPITAL GAMES</div>
+      <h1>Premium Gaming Collectibles & Figures</h1>
+      <p>Curated figures, model kits, and gaming collectibles. All purchases are completed securely through eBay.</p>
+      <a class="heroBtn" href="./shop.html">Shop Now</a>
+    </div>
+  </div>
+</section>
+
 <section class="hero">
   <div class="container">
     <h1>Premium Gaming Collectibles & Figures</h1>
