--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body class="bgTexture">
 <header class="siteHeader">
   <div class="topNav">
     <a href="./shop.html">Shop</a>
