--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="heroArt" aria-hidden="true">
-      <img src="./assets/hero-illustration.png" alt="">
+      <img src="./assets/hero-bg.png" alt="">
     </div>
   </div>
 </section>
