--- a/shop.html
+++ b/shop.html
@@ -70,8 +70,10 @@
   </div>
 </footer>
 
-<script src="./products.js"></script>
-<script src="./app.js"></script>
+  <script src="products.js"></script>
+  <script src="app.js"></script>
+
+
 <script>CG_initShop();</script>
 </body>
 </html>
