--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </section>
 
 <section class="homeSection">
-  <h2 class="sectionHeading"><span class="line"></span> Shop by Category <span class="line"></span></h2>
+  <h2 class="sectionHeading"><span class="line"></span>WHY CAPITALGAMES?<span class="line"></span></h2>
 
   <div class="categoryGrid">
     <a class="catCard" href="./shop.html">
