--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <header class="siteHeader">
   <div class="topNav">
-    <a href="./shop.html">Shop</a>
-    <a href="./shop.html">Consoles</a>
-    <a href="./shop.html">Games</a>
-    <a href="./shop.html">Accessories</a>
-    <a href="./shop.html">Trading Cards</a>
-    <a href="./shop.html">New Arrivals</a>
+    <a href="./shop.html">Shop</div>
+    <a href="./shop.html">Consoles</div>
+    <a href="./shop.html">Games</div>
+    <a href="./shop.html">Accessories</div>
+    <a href="./shop.html">Trading Cards</div>
+    <a href="./shop.html">New Arrivals</div>
   </div>
 
   <div class="headerWrap">
@@ -37,13 +37,13 @@
     <div class="headerIcons" aria-label="Header icons (placeholders)">
       <a class="iconBtn" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener" title="eBay Store">
         <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M12 1a7 7 0 00-7 7c0 5-2 6-2 6h18s-2-1-2-6a7 7 0 00-7-7zm0 22a3 3 0 003-3H9a3 3 0 003 3z"/></svg>
-      </a>
+      </div>
       <a class="iconBtn" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener" title="Wishlist (placeholder)">
         <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M12 21s-7-4.35-9.33-8.4C.8 9.2 2.6 6 6 6c1.8 0 3 .95 4 2 1-1.05 2.2-2 4-2 3.4 0 5.2 3.2 3.33 6.6C19 16.65 12 21 12 21z"/></svg>
-      </a>
+      </div>
       <a class="iconBtn" href="./shop.html" title="Cart (placeholder)">
         <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M7 18a2 2 0 104 0H7zm8 0a2 2 0 104 0h-4zM6.2 6l.8 4h11.6l1-4H6.2zM3 4h2l2.2 11h12.5l1.3-6.2A2 2 0 0019 6H6"/></svg>
-      </a>
+      </div>
     </div>
 </div>
   </div>
@@ -56,7 +56,7 @@
       <h1>COLLECTIBLES &amp; FIGURES</h1>
       <p>Curated figures, model kits, and gaming collectibles.<br>
          All purchases are completed securely through eBay.</p>
-      <a class="heroBtn" href="./shop.html">Shop Now</a>
+      <a class="heroBtn" href="./shop.html">Shop Now</div>
     </div>
 
     </div>
@@ -69,41 +69,34 @@
 </section>
 
 <section class="homeSection">
-  <h2 class="sectionHeading"><span class="line"></span>WHY CAPITALGAMES?<span class="line"></span></h2>
+  <h2 class="sectionHeading"><span class="line"></span> WHY CAPITALGAMES? <span class="line"></span></h2>
 
   <div class="categoryGrid">
-    <a class="catCard" href="./shop.html">
+    <div class="catCard" data-link-removed="true">
       <div class="catIcon">
         <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M21 8l-9-5-9 5v10l9 5 9-5V8zm-9 13l-7-4V9l7 4v8zm2 0v-8l7-4v8l-7 4z"/></svg>
       </div>
       <div class="catTitle">Games</div>
       <div class="catSub">Discover retro and modern video games.</div>
-    </a>
-
-    <a class="catCard" href="./shop.html">
+    </div><div class="catCard" data-link-removed="true">
       <div class="catIcon">
         <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M7 9h10a4 4 0 014 4v3a2 2 0 01-2 2h-2l-1 2h-2l-1-2H11l-1 2H8l-1-2H5a2 2 0 01-2-2v-3a4 4 0 014-4zm2 3a1 1 0 100 2 1 1 0 000-2zm6 0h2v2h-2v-2z"/></svg>
       </div>
       <div class="catTitle">Consoles</div>
       <div class="catSub">Find classic and current gaming consoles.</div>
-    </a>
-
-    <a class="catCard" href="./shop.html">
+    </div><div class="catCard" data-link-removed="true">
       <div class="catIcon">
         <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M4 7h16v10H4V7zm2 2v6h12V9H6zm1 7h10v2H7v-2z"/></svg>
       </div>
       <div class="catTitle">Accessories</div>
       <div class="catSub">Controllers, add-ons, and extras.</div>
-    </a>
-
-    <a class="catCard" href="./shop.html">
+    </div><div class="catCard" data-link-removed="true">
       <div class="catIcon">
         <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M7 4h10v4H7V4zm-2 6h14v10H5V10zm2 2v6h10v-6H7z"/></svg>
       </div>
       <div class="catTitle">Trading Cards</div>
       <div class="catSub">TCG singles, bundles, and collectibles.</div>
-    </a>
-  </div>
+    </div></div>
 </section>
 
 <section class="homeSection">
@@ -112,8 +105,7 @@
 
   <div class="joinRow">
     <input class="joinInput" type="email" placeholder="Enter your email…" aria-label="Email (placeholder)">
-    <a class="joinBtn" href="#" onclick="alert('Placeholder: newsletter hookup later');return false;">Subscribe</a>
-  </div>
+    <a class="joinBtn" href="#" onclick="alert('Placeholder: newsletter hookup later');return false;">Subscribe</div></div>
 </section>
 
 <footer class="siteFooter">
