--- a/index.html
+++ b/index.html
@@ -78,25 +78,32 @@
       </div>
       <div class="catTitle">Games</div>
       <div class="catSub">Discover retro and modern video games.</div>
-    </div><div class="catCard" data-link-removed="true">
+    </div>
+
+    <div class="catCard" data-link-removed="true">
       <div class="catIcon">
         <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M7 9h10a4 4 0 014 4v3a2 2 0 01-2 2h-2l-1 2h-2l-1-2H11l-1 2H8l-1-2H5a2 2 0 01-2-2v-3a4 4 0 014-4zm2 3a1 1 0 100 2 1 1 0 000-2zm6 0h2v2h-2v-2z"/></svg>
       </div>
       <div class="catTitle">Consoles</div>
       <div class="catSub">Find classic and current gaming consoles.</div>
-    </div><div class="catCard" data-link-removed="true">
+    </div>
+
+    <div class="catCard" data-link-removed="true">
       <div class="catIcon">
         <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M4 7h16v10H4V7zm2 2v6h12V9H6zm1 7h10v2H7v-2z"/></svg>
       </div>
       <div class="catTitle">Accessories</div>
       <div class="catSub">Controllers, add-ons, and extras.</div>
-    </div><div class="catCard" data-link-removed="true">
+    </div>
+
+    <div class="catCard" data-link-removed="true">
       <div class="catIcon">
         <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M7 4h10v4H7V4zm-2 6h14v10H5V10zm2 2v6h10v-6H7z"/></svg>
       </div>
       <div class="catTitle">Trading Cards</div>
       <div class="catSub">TCG singles, bundles, and collectibles.</div>
-    </div></div>
+    </div>
+  </div>
 </section>
 
 <section class="homeSection">
@@ -105,7 +112,8 @@
 
   <div class="joinRow">
     <input class="joinInput" type="email" placeholder="Enter your email…" aria-label="Email (placeholder)">
-    <a class="joinBtn" href="#" onclick="alert('Placeholder: newsletter hookup later');return false;">Subscribe</div></div>
+    <a class="joinBtn" href="#" onclick="alert('Placeholder: newsletter hookup later');return false;">Subscribe</div>
+  </div>
 </section>
 
 <footer class="siteFooter">
