--- a/index.html
+++ b/index.html
@@ -69,39 +69,39 @@
 </section>
 
 <section class="homeSection">
-  <h2 class="sectionHeading"><span class="line"></span> Shop by Category <span class="line"></span></h2>
+  <h2 class="sectionHeading"><span class="line"></span> Shop with Confidence <span class="line"></span></h2>
 
   <div class="categoryGrid">
-    <a class="catCard" href="./shop.html">
-      <div class="catIcon">
-        <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M21 8l-9-5-9 5v10l9 5 9-5V8zm-9 13l-7-4V9l7 4v8zm2 0v-8l7-4v8l-7 4z"/></svg>
+    <a class="catCard" href="./shop.html" aria-label="Curated for Collectors - Shop">
+      <div class="catIcon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" width="26" height="26"><path fill="currentColor" d="M12 2l2.9 6.1 6.7.9-4.9 4.7 1.2 6.6L12 17.9 6.1 20.3l1.2-6.6L2.4 9l6.7-.9L12 2z"/></svg>
       </div>
-      <div class="catTitle">Games</div>
-      <div class="catSub">Discover retro and modern video games.</div>
+      <div class="catTitle">Curated for Collectors</div>
+      <div class="catSub">Hand-picked items chosen for quality, condition, and collector appeal.</div>
     </a>
 
-    <a class="catCard" href="./shop.html">
-      <div class="catIcon">
-        <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M7 9h10a4 4 0 014 4v3a2 2 0 01-2 2h-2l-1 2h-2l-1-2H11l-1 2H8l-1-2H5a2 2 0 01-2-2v-3a4 4 0 014-4zm2 3a1 1 0 100 2 1 1 0 000-2zm6 0h2v2h-2v-2z"/></svg>
+    <a class="catCard" href="./shop.html" aria-label="Gaming & Pop-Culture Collectibles - Shop">
+      <div class="catIcon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" width="26" height="26"><path fill="currentColor" d="M7 9h10a4 4 0 014 4v3a2 2 0 01-2 2h-2l-1 2h-2l-1-2H11l-1 2H8l-1-2H5a2 2 0 01-2-2v-3a4 4 0 014-4zm2 3a1 1 0 100 2 1 1 0 000-2zm6 0h2v2h-2v-2z"/></svg>
       </div>
-      <div class="catTitle">Consoles</div>
-      <div class="catSub">Find classic and current gaming consoles.</div>
+      <div class="catTitle">Gaming &amp; Pop-Culture Collectibles</div>
+      <div class="catSub">Action figures, model kits, construction sets, and nostalgia-driven releases.</div>
     </a>
 
-    <a class="catCard" href="./shop.html">
-      <div class="catIcon">
-        <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M4 7h16v10H4V7zm2 2v6h12V9H6zm1 7h10v2H7v-2z"/></svg>
+    <a class="catCard" href="./about.html" aria-label="Proudly Canadian - About">
+      <div class="catIcon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" width="26" height="26"><path fill="currentColor" d="M12 2c-2.8 1.8-5.6 3-9 3v8c0 5 4.4 8.4 9 9 4.6-.6 9-4 9-9V5c-3.4 0-6.2-1.2-9-3zm0 6.2l1.2 2.1 2.4-.5-1.6 1.8 1.6 1.8-2.4-.5L12 15l-1.2-2.3-2.4.5 1.6-1.8-1.6-1.8 2.4.5L12 8.2z"/></svg>
       </div>
-      <div class="catTitle">Accessories</div>
-      <div class="catSub">Controllers, add-ons, and extras.</div>
+      <div class="catTitle">Proudly Canadian</div>
+      <div class="catSub">Canada-based seller shipping worldwide with trusted delivery.</div>
     </a>
 
-    <a class="catCard" href="./shop.html">
-      <div class="catIcon">
-        <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true"><path fill="currentColor" d="M7 4h10v4H7V4zm-2 6h14v10H5V10zm2 2v6h10v-6H7z"/></svg>
+    <a class="catCard" href="./shipping.html" aria-label="Fast, Reliable Shipping - Shipping">
+      <div class="catIcon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" width="26" height="26"><path fill="currentColor" d="M20 8h-3V4H3v12h2a3 3 0 006 0h6a3 3 0 006 0h1v-5l-4-3zm-5-2v2H5V6h10zm-7 12a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm12 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm2-4h-.5a3 3 0 00-5 0H11a3 3 0 00-6 0H5v-3h10V9h3l4 3v2z"/></svg>
       </div>
-      <div class="catTitle">Trading Cards</div>
-      <div class="catSub">TCG singles, bundles, and collectibles.</div>
+      <div class="catTitle">Fast, Reliable Shipping</div>
+      <div class="catSub">Carefully packed, quickly shipped, always protected.</div>
     </a>
   </div>
 </section>
