--- a/about.html
+++ b/about.html
@@ -10,12 +10,7 @@
 <body>
 <header>
   <div class="topNav">
-    <a href="./shop.html">Shop</a>
-    <a href="./shop.html#cat=Consoles">Consoles</a>
-    <a href="./shop.html#cat=Games">Games</a>
-    <a href="./shop.html#cat=Accessories">Accessories</a>
-    <a href="./shop.html#cat=Trading%20Cards">Trading Cards</a>
-    <a href="./shop.html#new">New Arrivals</a>
+    <a class="topNoticeLink" href="./shipping.html">U.S. buyers: We ship via eBay International Shipping (EIS) — click for details.</a>
   </div>
 
 <div class="bar">
