--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
 
 <header class="siteHeader">
   <div class="topNav">
-    <a href="./shop.html">Shop</a>
-    <a href="./shop.html">Consoles</a>
-    <a href="./shop.html">Games</a>
-    <a href="./shop.html">Accessories</a>
-    <a href="./shop.html">Trading Cards</a>
-    <a href="./shop.html">New Arrivals</a>
+    <a class="topNoticeLink" href="./shipping.html">U.S. buyers: We ship via eBay International Shipping (EIS) — click for details.</a>
   </div>
 
   <div class="headerWrap">
