--- a/about.html
+++ b/about.html
@@ -17,15 +17,14 @@
     <div class="brand">
       <img class="logoMain" src="./assets/CapitalGamesmain.png" alt="Capital Games">
     </div>
-    <nav>
+        <nav>
       <a href="./index.html">Home</a>
-      <a href="./shop.html">Shop</a>
+      <a href="./shop.html">Products</a>
+      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay</a>
       <a href="./about.html" aria-current="page">About</a>
-      <a href="./shipping.html">Shipping</a>
-      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay Store</a>
+      <a href="./contact.html">Contact</a>
     </nav>
 </div>
-  </div>
 </header>
 
 <div class="container">
