--- a/index.html
+++ b/index.html
@@ -28,18 +28,13 @@
         </svg>
       </button>
     </div>
-
-    <div class="headerIcons" aria-label="Header icons (placeholders)">
-      <a class="iconBtn" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener" title="eBay Store">
-        <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M12 1a7 7 0 00-7 7c0 5-2 6-2 6h18s-2-1-2-6a7 7 0 00-7-7zm0 22a3 3 0 003-3H9a3 3 0 003 3z"/></svg>
-      </a>
-      <a class="iconBtn" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener" title="Wishlist (placeholder)">
-        <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M12 21s-7-4.35-9.33-8.4C.8 9.2 2.6 6 6 6c1.8 0 3 .95 4 2 1-1.05 2.2-2 4-2 3.4 0 5.2 3.2 3.33 6.6C19 16.65 12 21 12 21z"/></svg>
-      </a>
-      <a class="iconBtn" href="./shop.html" title="Cart (placeholder)">
-        <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M7 18a2 2 0 104 0H7zm8 0a2 2 0 104 0h-4zM6.2 6l.8 4h11.6l1-4H6.2zM3 4h2l2.2 11h12.5l1.3-6.2A2 2 0 0019 6H6"/></svg>
-      </a>
-    </div>
+<nav class="headerLinks" aria-label="Primary navigation">
+  <a href="./index.html" aria-current="page">Home</a>
+  <a href="./shop.html">Products</a>
+  <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay</a>
+  <a href="./about.html">About</a>
+  <a href="./contact.html">Contact</a>
+</nav>
 </div>
   </div>
 </header>
