--- a/index_backup.html
+++ b/index_backup.html
@@ -96,6 +96,16 @@
   </div>
 </section>
 
+<section class="homeSection">
+  <h2 class="sectionHeading"><span class="line"></span> Join the Capital Games Community <span class="line"></span></h2>
+  <p class="joinSub">Sign up for the latest updates on new arrivals, promotions, and gaming news (placeholder).</p>
+
+  <div class="joinRow">
+    <input class="joinInput" type="email" placeholder="Enter your email…" aria-label="Email (placeholder)">
+    <a class="joinBtn" href="#" onclick="alert('Placeholder: newsletter hookup later');return false;">Subscribe</a>
+  </div>
+</section>
+
 <footer class="siteFooter">
   <div class="foot">
     <div>© Capital Games</div>
@@ -105,6 +115,7 @@
 
   <script src="products.js"></script>
   <script src="app.js"></script>
+
 
 <script>CG_renderFeatured();</script>
 </body>
