--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,9 @@
   </div>
 </div>
 
-<footer>
+<footer class="siteFooter">
   <div class="foot">
-    <div>© Capital Games</div>
+    <div>Copyright 2026 Capital Games</div>
     <div>All purchases are completed through eBay for buyer protection.</div>
   </div>
 </footer>
