--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <footer class="siteFooter">
   <div class="foot">
-    <div>© Capital Games</div>
+    <div>Copyright 2026 Capital Games</div>
     <div>All purchases are completed through eBay for buyer protection.</div>
   </div>
 </footer>
