--- a/shipping.html
+++ b/shipping.html
@@ -56,8 +56,17 @@
 
 <footer class="siteFooter">
   <div class="foot">
-    <div>Copyright 2026 Capital Games</div>
-    <div>All purchases are completed through eBay for buyer protection.</div>
+    <div class="footLeft">
+      <div class="footCopy">© 2026 Capital Games</div>
+      <div class="footNote">All purchases are completed through eBay for buyer protection.</div>
+    </div>
+    <div class="footRight">
+      <div class="footSitemap">
+        <a href="./about.html">About</a>
+        <a href="./shipping.html">Shipping</a>
+        <a href="./contact.html">Contact</a>
+      </div>
+    </div>
   </div>
 </footer>
 
