--- a/index.html
+++ b/index.html
@@ -98,14 +98,16 @@
 
 <footer class="siteFooter">
   <div class="foot">
-    <div class="footLeft">
+    <div class="footRow footRowTop">
+      <div class="footCopy">© 2026 Capital Games</div>
+    </div>
+    <div class="footRow footRowBottom">
+      <div class="footNote">All purchases are completed through eBay for buyer protection.</div>
       <div class="footSitemap">
         <a href="./about.html">About</a>
         <a href="./shipping.html">Shipping</a>
         <a href="./contact.html">Contact</a>
       </div>
-      <div class="footCopy">© 2026 Capital Games</div>
-      <div class="footNote">All purchases are completed through eBay for buyer protection.</div>
     </div>
   </div>
 </footer>
