--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
-<body class="bgTexture">
+<body class="bgTexture"  id="top">
 
 <header class="siteHeader">
   <div class="topNav">
@@ -104,9 +104,17 @@
     <div class="footRow footRowBottom">
       <div class="footNote">All purchases are completed through eBay for buyer protection.</div>
       <div class="footSitemap">
-        <a href="./about.html">About</a>
-        <a href="./shipping.html">Shipping</a>
-        <a href="./contact.html">Contact</a>
+        <div class="footSocial">
+          <a class="socialBtn" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener noreferrer">eBay</a>
+          <span class="socialBtn isDisabled" aria-disabled="true">X</span>
+          <span class="socialBtn isDisabled" aria-disabled="true">Instagram</span>
+        </div>
+        <div class="footLinks">
+          <a href="#top">Home</a>
+          <a href="./shipping.html">Shipping</a>
+          <a href="./about.html">About</a>
+          <a href="./contact.html">Contact</a>
+        </div>
       </div>
     </div>
   </div>
