--- a/shop.html
+++ b/shop.html
@@ -67,9 +67,17 @@
     <div class="footRow footRowBottom">
       <div class="footNote">All purchases are completed through eBay for buyer protection.</div>
       <div class="footSitemap">
-        <a href="./about.html">About</a>
-        <a href="./shipping.html">Shipping</a>
-        <a href="./contact.html">Contact</a>
+        <div class="footSocial">
+          <a class="socialBtn" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener noreferrer">eBay</a>
+          <span class="socialBtn isDisabled" aria-disabled="true">X</span>
+          <span class="socialBtn isDisabled" aria-disabled="true">Instagram</span>
+        </div>
+        <div class="footLinks">
+          <a href="./index.html#top">Home</a>
+          <a href="./shipping.html">Shipping</a>
+          <a href="./about.html">About</a>
+          <a href="./contact.html">Contact</a>
+        </div>
       </div>
     </div>
   </div>
