--- a/shipping.html
+++ b/shipping.html
@@ -63,9 +63,9 @@
       <div class="footNote">All purchases are completed through eBay for buyer protection.</div>
       <div class="footSitemap">
         <div class="footSocial">
-          <a class="socialBtn" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener noreferrer">eBay</a>
-          <span class="socialBtn isDisabled" aria-disabled="true">X</span>
-          <span class="socialBtn isDisabled" aria-disabled="true">Instagram</span>
+          <a class="socialBtn" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener noreferrer"><img class="socialIcon" src="./assets/icons/icon-ebay.svg" alt="" aria-hidden="true"/><span class="srOnly">eBay</span></a>
+          <span class="socialBtn isDisabled" aria-disabled="true"><img class="socialIcon" src="./assets/icons/icon-x.svg" alt="" aria-hidden="true"/><span class="srOnly">X</span></span>
+          <span class="socialBtn isDisabled" aria-disabled="true"><img class="socialIcon" src="./assets/icons/icon-instagram.svg" alt="" aria-hidden="true"/><span class="srOnly">Instagram</span></span>
         </div>
         <div class="footLinks">
           <a href="./index.html#top">Home</a>
